--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "crawler_code"]
 	path = crawler_code
-	url = https://github.com/companyService/crawler_code.git
+	url = https://git.oschina.net/weiboEyes/crawler_code.git
